--- a/app/template/default/Contact/index.twig
+++ b/app/template/default/Contact/index.twig
@@ -174,10 +174,9 @@ file that was distributed with this source code.
                                 </div>
                                 <div class="ec-zipInputHelp">
                                     <div class="ec-zipInputHelp__icon">
-                                        <div class="ec-icon"><img
-                                                    src="{{ asset('assets/icon/question-white.svg') }}" alt="">
-                                        </div>
-                                    </div><a href="https://www.post.japanpost.jp/zipcode/" target="_blank"><span>{{ '郵便番号検索'|trans }}</span></a>
+                                        <div class="ec-icon"><img src="{{ asset('assets/icon/question-white.svg') }}" alt=""></div>
+                                    </div>
+                                    <a href="https://www.post.japanpost.jp/zipcode/" target="_blank"><span>{{ '郵便番号検索'|trans }}</span></a>
                                 </div>
                                 {{ form_errors(form.postal_code) }}
                                 <div class="ec-select{{ has_errors(form.address.pref) ? ' error' }}">
