--- a/app/template/default/Mail/contact_light_mail.twig
+++ b/app/template/default/Mail/contact_light_mail.twig
@@ -59,7 +59,7 @@ TEL： {{ data.phone_number }}
 
 フリーダイヤル　0120-927-760
 携帯・PHS　0948-96-8160
-お問い合わせ専用アドレス　customer@ramrock.co.jp
+お問い合わせ専用アドレス　contact@ramrock-eyes.jp
 公式HP　https://ramrock-eyes.jp
 -----------------------------------------------------------------------------
 ※このメールは送信専用のアドレスから自動送信されているため、
