--- a/app/template/default/Mail/enquete_mail.twig
+++ b/app/template/default/Mail/enquete_mail.twig
@@ -45,36 +45,6 @@ file that was distributed with this source code.
     
 {% endfor %}
 
-{# みまもりCUBEを利用するきっかけは？ ：               {{ data.query1|join(',') }}
-
-みまもりCUBE知ったきっかけは？ ：                   {{ data.query2|join(',') }}
-
-具体的にどの様な事が心配ですか？ ：                 {{ data.query3|join(',') }}
-
-いつ頃からみまもりカメラを探されていましたか？ ：       {{ data.query4 }}
-
-今まで見守り等をする為にご利用になった商品はありますか？ ： {{ data.query5 }}
-
-【わかりやすかったこと】具体的にどの部分がそう思われましたか？ ： {{ data.query6_1|join(',') }}
-
-【わかりづらかったこと】具体的にどの部分がそう思われましたか？ ： {{ data.query6_2|join(',') }}
-
-みまもりCUBEのどこに魅力を感じましたか？ ：         {{ data.query7|join(',') }}
-
-みまもりCUBEのどの機能をメインに使われる予定ですか？ ： {{ data.query8|join(',') }}
-
-普段、SNSを利用していますか？ ：                    {{ data.query9 }}
-
-上記質問で「利用している」とお答えいただいたは、ご利用のSNSを選択してください。 ： {{ data.query9_other|join(',') }}
-
-みまもりＣＵＢＥを設置する都道府県を教えてください ： {{ data.query10 }}
-
-ライブ映像・録画の確認、声かけ、現地の音を聞く　これらの機能を使用できて月額3,900円の価格はどう思われますか？ ： {{ data.query11 }}
-
-今回お申込みいただくまでにお電話やメール等でお問合せはされましたか？ ： {{ data.query12|join(',') }}
-
-最後にご意見・ご質問をお聞かせください ：              {{ data.query13 }} #}
-
 -----------------------------------------------------------------------------
 
 株式会社ラムロック
@@ -83,7 +53,7 @@ file that was distributed with this source code.
 
 フリーダイヤル　0120-927-760
 携帯・PHS　0948-96-8160
-お問い合わせ専用アドレス　customer@ramrock.co.jp
+お問い合わせ専用アドレス　contact@ramrock-eyes.jp
 公式HP　https://ramrock-eyes.jp
 
 -----------------------------------------------------------------------------
