--- a/app/template/user_data/voice.twig
+++ b/app/template/user_data/voice.twig
@@ -28,6 +28,7 @@
 		<div class="voiceblock">
 			<div class="cmnbox01">
 			    <p class="voice05">ご利用者の声</p>
+				<p style="margin-bottom: 10px">みまもりCUBEをご利用中のお客様に感想を伺いました。</p>
 				<div class="voice01">
 					<div class="voice02 mh01">
 						<h3 class="voice03">見守る私の方が精神的に安定しました。</h3>
@@ -122,10 +123,11 @@
 				        color: #EB6E45;
                         font-size: 32px;
                         font-weight: 800;
-                        margin-bottom: 30px;
+                        margin-bottom: 5px;
 				    }
 				</style>
 				<p class="voice05">ご利用者アンケート</p>
+				<p style="margin-bottom: 10px">みまもりCUBEをご利用中のお客様にアンケートを行いました。</p>
 				<div class="voice01">
 				    <div class="voice02 mh01">
 						<h3 class="voice03">Q.みまもりCUBEをご利用前はどんな事にお困りでしたか?</h3>
