--- a/app/template/default/ContactPlus/complete.twig
+++ b/app/template/default/ContactPlus/complete.twig
@@ -28,7 +28,7 @@ file that was distributed with this source code.
                     改めて担当者よりご連絡をさせていただきます。 <br />
                     3営業日を過ぎても連絡がない場合は、申し訳ございませんが、  <br />
                     下記連絡先までご連絡ください。 <br />
-                    <a href="mailto:customer@ramrock.co.jp">customer@ramrock.co.jp</a>
+                    <a href="mailto:contact@ramrock-eyes.jp">contact@ramrock-eyes.jp</a>
                 </p>
                 <div class="ec-off4Grid">
                     <div class="ec-off4Grid__cell"><a class="ec-blockBtn--cancel" href="{{ url('homepage') }}">{{'トップページへ'|trans}}</a></div>
