--- a/app/template/default/Enquete/complete.twig
+++ b/app/template/default/Enquete/complete.twig
@@ -30,10 +30,13 @@ file that was distributed with this source code.
                     カメラ申込時にアンケート割引価格が適⽤されます。<br />
                     割引価格が適⽤されない場合は、<br />
                     下記連絡先までご連絡ください。<br />
-                    customer@ramrock.co.jp
+                    contact@ramrock-eyes.jp
                 </p>
                 <div class="ec-off4Grid">
-                    <div class="ec-off4Grid__cell"><a class="ec-blockBtn--cancel" href="{{ url('homepage') }}">{{ 'トップページへ'|trans }}</a></div>
+                    <div class="ec-off4Grid__cell">
+                        <a href="{{ url('product_detail', {'id': 1}) }}" class="ec-blockBtn--action">お申込みに進む</a>
+                        {# <a class="ec-blockBtn--cancel" href="{{ url('homepage') }}">{{ 'トップページへ'|trans }}</a> #}
+                    </div>
                 </div>
             </div>
         </div>
