--- a/app/template/default/Mail/contact_mail.twig
+++ b/app/template/default/Mail/contact_mail.twig
@@ -71,7 +71,7 @@ CUBEを知ったきっかけ： {{ data.moment|join(',') }}
 
 フリーダイヤル　0120-927-760
 携帯・PHS　0948-96-8160
-お問い合わせ専用アドレス　customer@ramrock.co.jp
+お問い合わせ専用アドレス　contact@ramrock-eyes.jp
 公式HP　https://ramrock-eyes.jp
 -----------------------------------------------------------------------------
 ※このメールは送信専用のアドレスから自動送信されているため、
