--- a/app/template/default/Mail/customer_change.twig
+++ b/app/template/default/Mail/customer_change.twig
@@ -37,7 +37,7 @@ file that was distributed with this source code.
 
 フリーダイヤル　0120-927-760
 携帯・PHS　0948-96-8160
-お問い合わせ専用アドレス　customer@ramrock.co.jp
+お問い合わせ専用アドレス　contact@ramrock-eyes.jp
 公式HP　https://ramrock-eyes.jp
 -----------------------------------------------------------------------------
 ※このメールは送信専用のアドレスから自動送信されているため、
