--- a/app/template/default/Mail/entry_confirm.twig
+++ b/app/template/default/Mail/entry_confirm.twig
@@ -34,4 +34,22 @@ file that was distributed with this source code.
 {{ activateUrl }}
 
 上記URLにて本会員登録が完了いたしましたら改めてご登録内容ご確認メールをお送り致します。
+
+-----------------------------------------------------------------------------
+
+株式会社ラムロック
+〒820-1111
+福岡県飯塚市勢田1950-1
+
+フリーダイヤル　0120-927-760
+携帯・PHS　0948-96-8160
+お問い合わせ専用アドレス　contact@ramrock-eyes.jp
+公式HP　https://ramrock-eyes.jp
+
+-----------------------------------------------------------------------------
+
+※このメールは送信専用のアドレスから自動送信されているため、
+ご返信いただいても内容の確認や回答ができません。
+ご質問はお問合せ専用アドレスよりご連絡ください。
+
 {% endautoescape %}
