--- a/app/template/default/Mail/order_reply.twig
+++ b/app/template/default/Mail/order_reply.twig
@@ -129,9 +129,21 @@ file that was distributed with this source code.
 {{ Order.complete_mail_message }}
 {% endif %}
 
-============================================
+-----------------------------------------------------------------------------
 
-このメッセージはお客様へのお知らせ専用ですので、
-このメッセージへの返信としてご質問をお送りいただいても回答できません。
-ご了承ください。
+株式会社ラムロック
+〒820-1111
+福岡県飯塚市勢田1950-1
+
+フリーダイヤル　0120-927-760
+携帯・PHS　0948-96-8160
+お問い合わせ専用アドレス　contact@ramrock-eyes.jp
+公式HP　https://ramrock-eyes.jp
+
+-----------------------------------------------------------------------------
+
+※このメールは送信専用のアドレスから自動送信されているため、
+ご返信いただいても内容の確認や回答ができません。
+ご質問はお問合せ専用アドレスよりご連絡ください。
+
 {% endautoescape %}
