--- a/app/template/default/Mail/proof_mail.twig
+++ b/app/template/default/Mail/proof_mail.twig
@@ -26,17 +26,19 @@ file that was distributed with this source code.
 ---------------------------------------------------------------------
 ◎　ご本人確認に関連する法令
 　携帯電話不正防止法（携帯音声通信事業者による契約者等の本人確認等及び携帯音声通信役務の不正な利用の防止に関する法律）第３条
+-----------------------------------------------------------------------------
 
----------------------------------------------------------------------
-株式会社ラムロック　カスタマーセンター
+株式会社ラムロック
 〒820-1111
 福岡県飯塚市勢田1950-1
 
 フリーダイヤル　0120-927-760
 携帯・PHS　0948-96-8160
-お問い合わせ専用アドレス　customer@ramrock.co.jp
+お問い合わせ専用アドレス　contact@ramrock-eyes.jp
 公式HP　https://ramrock-eyes.jp
+
 -----------------------------------------------------------------------------
+
 ※このメールは送信専用のアドレスから自動送信されているため、
 ご返信いただいても内容の確認や回答ができません。
 ご質問はお問合せ専用アドレスよりご連絡ください。
